// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabNav component render correctly with active tab 1`] = `
<li
  className="movie-nav__item movie-nav__item--active"
>
  <a
    className="movie-nav__link"
    href={null}
    onClick={[Function]}
  >
    Overview
  </a>
</li>
`;

exports[`TabNav component render correctly with not active tab 1`] = `
<li
  className="movie-nav__item "
>
  <a
    className="movie-nav__link"
    href="#"
    onClick={[Function]}
  >
    Overview
  </a>
</li>
`;
